Deploy fixed version with model-viewer script

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>military_sim</title>
   <link rel="manifest" href="manifest.json">
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
